Output/slurm-735939.out
  File "/gpfs/mariana/home/akkusu/TBT-practice/TBT_for_VGG.py", line 384
    tar = tar.item()
    ^
IndentationError: expected an indented block after 'if' statement on line 383
